tests/__snapshots__/validation-configFile-syntax-errors-opening-bracket.snap.txt
Error: Value for the 'testFileMatch' option must be a list.

  1 | {
  2 |   'failFast': true,
  3 |   "testFileMatch": { "glob": "examples/*.tst.*" }
    |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  4 | }
  5 | 

      at ./tstyche.json:3:20

